[metadata]
name = azuresphere-device-api
version = attr: azuresphere_device_api.__version__
author = Microsoft
author_email= azspheremfrsamplesup@microsoft.com
long_description = file: README.md
long_description_content_type = text/markdown
description = A library for interacting with Azure Sphere devices using the inbuilt REST server.
license = MIT
license_files = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
   azuresphere_device_api = azuresphere_device_api
packages = find:
python_requires = >=3.8
install_requires = 
    requests >= 2.27.1
    requests-toolbelt >= 0.9.1

# include certificates
[options.package_data]
* = certs/*.pem

[options.packages.find]
exclude =
    *tests*
